[gd_scene load_steps=2 format=3 uid="uid://c8vq2j3gxrdab"]

[ext_resource type="Script" path="res://UnifiedMapEditor.gd" id="1_unified"]

[node name="UnifiedMapEditor" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -400.0
offset_right = 300.0
grow_vertical = 0
script = ExtResource("1_unified")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Map Editor"
horizontal_alignment = 1

[node name="ModeButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TerrainButton" type="Button" parent="VBoxContainer/ModeButtons"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "Terrain"

[node name="ObjectsButton" type="Button" parent="VBoxContainer/ModeButtons"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Objects"

[node name="ResourcesButton" type="Button" parent="VBoxContainer/ModeButtons"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Resources"

[node name="BlockingButton" type="Button" parent="VBoxContainer/ModeButtons"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Blocking"

[node name="SurfaceButton" type="Button" parent="VBoxContainer/ModeButtons"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Surface"

[node name="Separator1" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PaletteScroll" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PaletteContainer" type="VBoxContainer" parent="VBoxContainer/PaletteScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Separator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ActionButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="VBoxContainer/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="DeleteButton" type="Button" parent="VBoxContainer/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delete"

[node name="BackButton" type="Button" parent="VBoxContainer/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"
